# derpibooru-proxy

./: Cargo.toml
src/: api.rs  config.rs  errors.rs  main.rs  models.rs  templates.rs  views.rs
src/templates/: base.html  get.js  image.html  main.css  pagination.html  search.html  set.js
templates/: base.html.tera  images.html.tera
