cargo-features = ["strip"]

[package]
name = "derpibooru-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
#thiserror = "*"
lazy_static = "*"
dotenv = "*"
reqwest = { version = "*", features = ["blocking", "socks"] }

serde = { version = "*", features = ["derive"] }
serde_json = "*"

rocket = "*"
rocket_contrib = { version = "*", features = ["tera_templates"], default-features = false }
