cargo-features = ["strip"]

[package]
name = "derpibooru-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
lto = true

[dependencies]
#thiserror = "*"
lazy_static = "1.*"
dotenv = "0.*"
reqwest = { version = "0.11.*", features = ["blocking", "socks"] }

serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"

rocket = "0.4.*"
tera = "1.15"
